--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
-    "webpack": "4.32.0",
-    "webpack-cli": "3.3.2",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "3.3.1",
     "webpack-node-externals": "^1.7.2"
   },
